bynkc/tests/fixtures/positive/157_state_nonzero_default/src/retry.bynk
context retry

agent Task {
  key id: String

  store retries: Cell[Int] = 3
  store done: Cell[Bool]

  on call peek() -> Effect[Result[(), String]] {
    Ok(())
  }
}
